src/test/egern/success/if_statement_false.egern
var a = 3;
print(a);
if (a == 4) {
    print(1);
}
print(3);
