src/test/egern/fail/using_undeclared_variable_fail.egern
var a = 3;
print(a);
print(b);
